--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Nithin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2"
   }
 }
